# buddy-system

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  buddy.example.json  pyproject.toml
buddy/: __init__.py  board.py  cli.py  config.py  log.py  memory.py  sync.py
docs/: local-architecture.md  open-questions.md  operating-doctrine.md  roles-and-surfaces.md
tests/: test_board.py  test_config.py  test_log.py
