[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "buddy-system"
version = "0.1.0"
description = "A local multi-agent coordination protocol and shared memory CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
buddy = "buddy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["buddy*"]
